2010-05-12 Magnus Hagdorn
 * extensions/erosion/src/eis_erosion.F90: use new command line handler
 * extensions/erosion/src/simple_erosion.F90: ditto
 * extensions/erosion/src/erosion.F90: fix repository link
 * extensions/erosion/src/erosion_sediment.F90: ditto
 * extensions/erosion/src/erosion_setup.F90: ditto
 * extensions/erosion/src/erosion_types.F90: ditto

2010-05-11 Magnus Hagdorn
 * configure.in: create new Makefile
 * extensions/erosion/tests: import erosion tests from old repo
 * extensions/erosion/tests/Makefile.am: fix glimmer launcher
 * extensions/erosion/Makefile.am: decent into new directory

2010-05-11 Magnus Hagdorn
 * configure.in: create Makefiles in new subdirectories
 * doc/ext.tex, doc/ext_pdf.tex, doc/ext_ps.tex: new top level document for
   extensions
 * doc/Makefile.am: add new files
 * doc/glimmer.bib: add new references
 * doc/glimmer.tex: include new chapter
 * doc/ext/erosion: import erosion documentation from old repo
 * doc/ug/glide.tex: fix typo

2010-05-11 Magnus Hagdorn
 * configure.in: create new Makefile
 * move extensions/erosion to extensions/erosion/src

2010-05-11 Magnus Hagdorn
 * Makefile.am: add new sub directory
 * configure.in: add check whether erosion extension should be built, create
   new Makefiles
 * extensions: new directory for extensions
 * extensions/erosion: copied from old branch
 * extensions/erosion/erosion_version.F90.in: removed - unused
 * extensions/erosion/erosion_sediment.F90: fix module references
 * extensions/erosion/erosion.F90: ditto
 * extensions/erosion/Makefile.am: fix references to various libs and scripts
 * tests/EISMINT/src/Makefile.am: make EISMINT1/2 climate driver a library

2010-05-11 Magnus Hagdorn
 * m4macros/glimmer.m4: fix macro to look for new config script

2010-05-10 Magnus Hagdorn
 * configure.in: create new file
 * make.rules.in: configure now generates make.rules with correct SGE options
 * example-drivers/eis/fenscan/fenscan.config: hot file should store variables