@@ -149,7 +149,7 @@ The integrals over the flow law which need to be evaluated to get the sliding ve
 
 \begin{figure}[htbp]
   \centering
-  %\includegraphics[width=0.9\textwidth]{\dir/figs/plot_basal.eps}
+  \includegraphics[width=0.9\textwidth]{\dir/figs/plot_basal.eps}
   \caption{Thickness of deforming sediment layer, sliding velocity and average sediment velocity as a function of applied shear stress. Velocities plotted with solid lines are calculated with flow law Model B and dashed lines with Model C.}
   \label{erosion.fig.sed_velos}
 \end{figure}
